--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,10 +11,6 @@
   }
 }
 
-.read-the-docs {
-  color: #888;
-}
-
 label {
   font-weight: 600;
   font-size: 1rem;
@@ -52,9 +48,17 @@ button:hover {
   background: #3a78c2;
 }
 
-/* Invoice list */
-ul {
-  list-style: none;
+table {
+  width: 100%;
+  padding: 0.5rem 1rem;
+}
+
+tr:nth-child(even) {
+  background-color: #2c2c2c;
+}
+
+td {
+  padding: 0.2rem 1rem;
 }
 
 .error {
